--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 theme: jekyll-theme-cayman
 
 # Permalinks
-permalink:        pretty
-relative_permalinks: true
+#permalink:        pretty
+#relative_permalinks: true
 
 # Setup
 title:            ghpages
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+#tagline:          'A Jekyll theme'
+#description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 #url:              http://hyde.getpoole.com
-baseurl:          /
+#baseurl:          /
 
 #paginate:         5
 
